--- a/index.html
+++ b/index.html
@@ -69,13 +69,32 @@
     <div class="FAQ">
         <h1>Preguntas Frecuentes</h1>
         <ul class="preguntas">
-            <li><h2>¿Qué es Rotoflix?</h2>No lo sabemos.</li>
-            <li><h2>¿Cuanto cuesta Rotoflix?</h2>25€/mes.</li>
-            <li><h2>¿Dónde puedo ver Rotoflix?</h2>Portátiles, Smart TV y smartphones.</li>
-            <li><h2>¿Cómo cancelo?</h2>No se puede, haberlo pensado antes crack.</li>
-            <li><h2>¿Qué puedo ver en Rotoflix?</h2>Ahora mismo no funcionan los servidores, así que solo puedes ver esta página.</li>
-            <li><h2>¿Es Rotoflix bueno para los niños?</h2>¿Lo es dejarles un movil y que vean Pepa Pig todo el día?</li>
+            <details>
+                <summary>¿Qué es Rotoflix?</summary>
+                <p>No lo sabemos.</p>
+            </details>
+            <details>
+                <summary>¿Cuánto cuesta Rotoflix?</summary>
+                <p>25€/mes.</p>
+            </details>
+            <details>
+                <summary>¿Dónde puedo ver Rotoflix?</summary>
+                <p>Portátiles, Smart TV, móviles etc.</p>
+            </details>
+            <details>
+                <summary>¿Cómo cancelo?</summary>
+                <p>No se puede.</p>
+            </details>
+            <details>
+                <summary>¿Qué puedo ver en Rotoflix?</summary>
+                <p>Ahora mismo sólamente esta bonita página :)</p>
+            </details>
+            <details>
+                <summary>¿Es Rotoflix bueno para los niños?</summary>
+                <p>¿Lo es dejarles un movil y que vean Pepa Pig todo el día?</p>
+            </details>
          </ul>
+         
          <h1>Tu opinión nos interesa, deja aquí tus comentarios</h1>
          <div class="pie">
          <input class="email" placeholder="Deja aquí tu opinión" type="text"><button class="boton"><a href="./error.html"><strong>ENVIAR</strong></a></button>
